--- a/login.html
+++ b/login.html
@@ -3,35 +3,51 @@
 <head>
   <title>Login | Finance Point</title>
   <style>
-    body {
-      background: #0d0d0d;
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body, html {
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
       color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
+      background: #0d0d0d;
+      overflow: hidden;
     }
+
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
     .login-box {
-      background: #1a1a1a;
-      padding: 20px;
-      border-radius: 10px;
-      width: 300px;
-      margin: auto;
+      background: rgba(0,0,0,0.8);
+      padding: 25px;
+      border-radius: 12px;
+      width: 320px;
+      margin: 100px auto;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(255,215,0,0.2);
     }
+
     input {
       width: 90%;
       padding: 10px;
       margin: 10px 0;
       border: none;
       border-radius: 5px;
+      background: #1a1a1a;
+      color: white;
     }
+
     .btn {
       background: gold;
       color: black;
-      padding: 10px;
+      padding: 10px 20px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
     }
+
     .error-message {
       color: red;
       font-size: 14px;
@@ -40,6 +56,8 @@
   </style>
 </head>
 <body>
+  <div id="particles-js"></div>
+
   <div class="login-box">
     <h2>Login to Finance Point</h2>
     <input type="email" id="email" placeholder="Email">
@@ -48,6 +66,7 @@
     <div class="error-message" id="errorMsg"></div>
   </div>
 
+  <!-- Firebase + Login Logic -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
@@ -72,7 +91,6 @@
           window.location.href = "dashboard.html";
         })
         .catch((error) => {
-          // Clean message without showing "Firebase:"
           let message = "Login failed. Please check your credentials.";
           if (error.code === "auth/user-not-found") message = "Email not registered.";
           else if (error.code === "auth/wrong-password") message = "Incorrect password.";
@@ -80,6 +98,43 @@
           errorMsg.textContent = message;
         });
     }
+  </script>
+
+  <!-- Particles.js background -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": {
+          "value": 80
+        },
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "opacity": {
+          "value": 0.5
+        },
+        "size": {
+          "value": 2
+        },
+        "line_linked": {
+          "enable": true,
+          "distance": 120,
+          "color": "#ffffff",
+          "opacity": 0.4,
+          "width": 1
+        },
+        "move": {
+          "enable": true,
+          "speed": 1
+        }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": { "enable": true, "mode": "grab" }
+        }
+      }
+    });
   </script>
 </body>
 </html>
