--- a/dashboard.html
+++ b/dashboard.html
@@ -1,160 +1,163 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Finance Point Dashboard</title>
+  <meta charset="UTF-8">
+  <title>Dashboard | Finance Point</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body, html {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #111, #1a1a1a);
-      color: #fff;
-    }
-    header {
-      padding: 15px;
-      text-align: center;
-      font-size: 28px;
-      font-weight: bold;
-      background: #000000c2;
-    }
-    nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      background: #1c1c1c;
-      padding: 10px;
-    }
-    nav button {
-      background: transparent;
-      border: 1px solid #ffd700;
+      background: #0d0d0d;
       color: white;
-      padding: 8px 12px;
-      margin: 4px;
-      border-radius: 6px;
-      cursor: pointer;
+      height: 100%;
+      overflow-x: hidden;
     }
-    nav button.active {
-      background: #ffd700;
+
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    header {
+      background: rgba(0,0,0,0.85);
+      padding: 15px 20px;
+      font-size: 22px;
+      border-bottom: 1px solid gold;
+      text-align: center;
+    }
+
+    nav {
+      width: 200px;
+      height: 100vh;
+      background: #111;
+      position: fixed;
+      top: 60px;
+      left: 0;
+      padding-top: 20px;
+      border-right: 1px solid #333;
+    }
+
+    nav a {
+      display: block;
+      color: white;
+      padding: 12px 20px;
+      text-decoration: none;
+      border-bottom: 1px solid #222;
+    }
+
+    nav a:hover {
+      background: gold;
       color: black;
     }
+
+    main {
+      margin-left: 200px;
+      padding: 30px;
+    }
+
     section {
-      display: none;
+      margin-bottom: 30px;
+      background: rgba(0,0,0,0.5);
       padding: 20px;
+      border-radius: 10px;
+      border-left: 3px solid gold;
     }
-    section.active {
-      display: block;
+
+    h2 {
+      margin-bottom: 10px;
+      color: gold;
     }
-    .card {
-      background: #222;
-      border-left: 5px solid #ffd700;
-      padding: 12px;
-      margin-bottom: 15px;
-      border-radius: 6px;
-    }
-    .card h3 {
-      margin: 0 0 6px;
-    }
-    .card a {
-      color: #ffd700;
-      text-decoration: underline;
-    }
-    #logoutBtn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      padding: 10px 18px;
-      background: crimson;
-      border: none;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
+
+    @media (max-width: 768px) {
+      nav {
+        position: relative;
+        width: 100%;
+        height: auto;
+        display: flex;
+        overflow-x: auto;
+      }
+
+      nav a {
+        flex: 1;
+        text-align: center;
+        border-bottom: none;
+        border-right: 1px solid #222;
+      }
+
+      main {
+        margin-left: 0;
+        padding: 15px;
+      }
     }
   </style>
 </head>
 <body>
-  <header>Finance Point Dashboard</header>  <nav>
-    <button class="tab-btn active" data-target="announcements">📢 Announcements</button>
-    <button class="tab-btn" data-target="events">🎉 Events</button>
-    <button class="tab-btn" data-target="resources">📚 Resources</button>
-    <button class="tab-btn" data-target="birthday">🎂 Birthdays</button>
-    <button class="tab-btn" data-target="lost">🔍 Lost & Found</button>
-    <button class="tab-btn" data-target="feedback">💬 Feedback</button>
-  </nav><button id="logoutBtn">Logout</button>
+  <div id="particles-js"></div>
+
+  <header>
+    Welcome to Finance Point Dashboard
+  </header>
+
+  <nav>
+    <a href="dashboard.html">🏠 Dashboard</a>
+    <a href="events.html">📅 Events</a>
+    <a href="announcements.html">📢 Announcements</a>
+    <a href="quiz.html">🧠 Quiz of the Week</a>
+    <a href="downloads.html">📥 Resources</a>
+    <a href="birthdays.html">🎉 Birthdays</a>
+    <a href="lostfound.html">🔍 Lost & Found</a>
+  </nav>
 
   <main>
-    <section id="announcements" class="active"><div id="announcementsList"></div></section>
-    <section id="events"><div id="eventsList"></div></section>
-    <section id="resources"><div id="resourcesList"></div></section>
-    <section id="birthday"><div id="birthdayList"></div></section>
-    <section id="lost"><div id="lostList"></div></section>
-    <section id="feedback"><p>Contact PRO via WhatsApp: <a href="https://wa.me/2348142452729">08142452729</a></p></section>
-  </main>  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
-    import { getFirestore, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
+    <section>
+      <h2>📢 Latest Announcements</h2>
+      <p>📌 Departmental meeting on Thursday by 12 PM. Attendance is compulsory.</p>
+    </section>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-      authDomain: "finsa-connect.firebaseapp.com",
-      projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebasestorage.app",
-      messagingSenderId: "126845965255",
-      appId: "1:126845965255:web:c82539297a8464873d7fe2"
-    };
+    <section>
+      <h2>📅 Upcoming Events</h2>
+      <p>🎓 Finance Summit - July 20, 2025 | Guest Speaker: Prof. Ayo Awosusi</p>
+    </section>
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+    <section>
+      <h2>🧠 Quiz of the Week</h2>
+      <p>💡 This week’s quiz is based on "Enterprise Performance & Strategic Cost Management".</p>
+    </section>
 
-    onAuthStateChanged(auth, user => {
-      if (!user) window.location.href = "login.html";
-    });
+    <section>
+      <h2>💸 Finance Fact</h2>
+      <p>Did you know? Only 3 in 10 Nigerians have access to formal credit. Stay informed, stay ahead.</p>
+    </section>
+  </main>
 
-    document.getElementById("logoutBtn").addEventListener("click", () => {
-      signOut(auth).then(() => location.href = "login.html");
-    });
-
-    async function loadSection(col, containerId) {
-      const colRef = collection(db, col);
-      const q = query(colRef, orderBy("createdAt", "desc"));
-      const snapshot = await getDocs(q);
-      const container = document.getElementById(containerId);
-      container.innerHTML = "";
-      if (snapshot.empty) {
-        container.innerHTML = `<div class='card'><p>No data yet. Stay tuned!</p></div>`;
-        return;
-      }
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        let html = `<div class='card'>`;
-        if (col === "resources") {
-          html += `<h3>${data.title}</h3><a href='${data.link}' target='_blank'>Download</a>`;
-        } else if (col === "birthdays") {
-          html += `<p>🎉 ${data.name} - ${data.date}</p>`;
-        } else if (col === "lostFound") {
-          html += `<h3>${data.name}</h3><p>${data.desc}</p>`;
-        } else {
-          html += `<h3>${data.title}</h3><p>${data.body}</p>`;
+  <!-- Particles JS Background -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 70 },
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.5 },
+        "size": { "value": 2 },
+        "line_linked": {
+          "enable": true,
+          "distance": 120,
+          "color": "#ffffff",
+          "opacity": 0.4,
+          "width": 1
+        },
+        "move": { "enable": true, "speed": 1 }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": { "enable": true, "mode": "grab" }
         }
-        html += `</div>`;
-        container.innerHTML += html;
-      });
-    }
-
-    loadSection("announcements", "announcementsList");
-    loadSection("events", "eventsList");
-    loadSection("resources", "resourcesList");
-    loadSection("birthdays", "birthdayList");
-    loadSection("lostFound", "lostList");
-
-    document.querySelectorAll(".tab-btn").forEach(btn => {
-      btn.addEventListener("click", () => {
-        document.querySelectorAll(".tab-btn").forEach(b => b.classList.remove("active"));
-        document.querySelectorAll("main section").forEach(sec => sec.classList.remove("active"));
-        btn.classList.add("active");
-        document.getElementById(btn.dataset.target).classList.add("active");
-      });
+      }
     });
-  </script></body>
+  </script>
+</body>
 </html>
