--- a/dashboard.html
+++ b/dashboard.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Dashboard | Finance Point</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body, html {
       font-family: 'Segoe UI', sans-serif;
       background: #0d0d0d;
@@ -21,62 +27,92 @@
     }
 
     header {
-      background: rgba(0,0,0,0.85);
-      padding: 15px 20px;
-      font-size: 22px;
-      border-bottom: 1px solid gold;
       text-align: center;
+      background: rgba(0, 0, 0, 0.85);
+      padding: 20px;
+      font-size: 26px;
+      font-weight: bold;
+      color: gold;
+      border-bottom: 2px solid gold;
+      box-shadow: 0 2px 10px rgba(255, 215, 0, 0.2);
     }
 
     nav {
-      width: 200px;
+      width: 230px;
       height: 100vh;
-      background: #111;
+      background: linear-gradient(to bottom, #111, #000);
       position: fixed;
-      top: 60px;
+      top: 72px;
       left: 0;
       padding-top: 20px;
-      border-right: 1px solid #333;
+      border-right: 2px solid gold;
+      box-shadow: 3px 0 10px rgba(255, 215, 0, 0.1);
     }
 
     nav a {
       display: block;
       color: white;
-      padding: 12px 20px;
+      padding: 14px 25px;
       text-decoration: none;
       border-bottom: 1px solid #222;
+      transition: 0.3s;
     }
 
     nav a:hover {
       background: gold;
       color: black;
+      font-weight: bold;
+    }
+
+    #logoutBtn {
+      display: block;
+      margin: 30px 20px 0;
+      padding: 12px;
+      background: crimson;
+      color: white;
+      text-align: center;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
     }
 
     main {
-      margin-left: 200px;
-      padding: 30px;
+      margin-left: 230px;
+      padding: 40px 30px;
+    }
+
+    .user-info {
+      font-size: 18px;
+      margin-bottom: 20px;
+      color: #ccc;
+      text-align: center;
     }
 
     section {
+      background: rgba(255, 215, 0, 0.05);
+      padding: 25px;
+      border-left: 4px solid gold;
       margin-bottom: 30px;
-      background: rgba(0,0,0,0.5);
-      padding: 20px;
-      border-radius: 10px;
-      border-left: 3px solid gold;
+      border-radius: 12px;
+      box-shadow: 0 0 8px rgba(255, 215, 0, 0.1);
     }
 
     h2 {
       margin-bottom: 10px;
       color: gold;
+      font-size: 22px;
+      border-bottom: 1px solid gold;
+      padding-bottom: 5px;
     }
 
     @media (max-width: 768px) {
       nav {
-        position: relative;
         width: 100%;
         height: auto;
+        position: relative;
         display: flex;
         overflow-x: auto;
+        top: 0;
       }
 
       nav a {
@@ -88,7 +124,12 @@
 
       main {
         margin-left: 0;
-        padding: 15px;
+        padding: 20px;
+      }
+
+      #logoutBtn {
+        margin: 10px auto;
+        width: 90%;
       }
     }
   </style>
@@ -96,65 +137,106 @@
 <body>
   <div id="particles-js"></div>
 
-  <header>
-    Welcome to Finance Point Dashboard
-  </header>
+  <header id="greeting">Finance Point Dashboard</header>
 
   <nav>
     <a href="dashboard.html">🏠 Dashboard</a>
     <a href="events.html">📅 Events</a>
     <a href="announcements.html">📢 Announcements</a>
-    <a href="quiz.html">🧠 Quiz of the Week</a>
+    <a href="quiz.html">🧠 Quiz</a>
     <a href="downloads.html">📥 Resources</a>
     <a href="birthdays.html">🎉 Birthdays</a>
     <a href="lostfound.html">🔍 Lost & Found</a>
+    <a id="logoutBtn" href="#">🚪 Logout</a>
   </nav>
 
   <main>
+    <div class="user-info" id="userInfo">Loading student info...</div>
+
     <section>
       <h2>📢 Latest Announcements</h2>
-      <p>📌 Departmental meeting on Thursday by 12 PM. Attendance is compulsory.</p>
+      <p>🗓️ Departmental Congress – Thursday, 12PM at the main hall. Be punctual!</p>
     </section>
 
     <section>
       <h2>📅 Upcoming Events</h2>
-      <p>🎓 Finance Summit - July 20, 2025 | Guest Speaker: Prof. Ayo Awosusi</p>
+      <p>🎓 Finance Night holds July 20th – Dress code: Corporate Royalty 👑</p>
     </section>
 
     <section>
-      <h2>🧠 Quiz of the Week</h2>
-      <p>💡 This week’s quiz is based on "Enterprise Performance & Strategic Cost Management".</p>
-    </section>
-
-    <section>
-      <h2>💸 Finance Fact</h2>
-      <p>Did you know? Only 3 in 10 Nigerians have access to formal credit. Stay informed, stay ahead.</p>
+      <h2>💸 Finance Tip</h2>
+      <p>“Wealth is built by discipline, not desire.” – AAUA Finance Alumni</p>
     </section>
   </main>
 
-  <!-- Particles JS Background -->
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.firebasestorage.app",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+
+    auth.onAuthStateChanged(user => {
+      if (!user) {
+        window.location.href = "login.html";
+      } else {
+        const uid = user.uid;
+        db.collection("users").doc(uid).get().then(doc => {
+          if (doc.exists) {
+            const data = doc.data();
+            const name = data.name || "Finance Royal";
+            const matric = data.matric || "Unknown";
+
+            document.getElementById("greeting").textContent = `Hi, ${name}`;
+            document.getElementById("userInfo").textContent = `Matric Number: ${matric}`;
+          } else {
+            document.getElementById("userInfo").textContent = "Student record not found.";
+          }
+        });
+      }
+    });
+
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      auth.signOut().then(() => {
+        window.location.href = "login.html";
+      });
+    });
+  </script>
+
+  <!-- Particles Background -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
     particlesJS("particles-js", {
-      "particles": {
-        "number": { "value": 70 },
-        "color": { "value": "#ffffff" },
-        "shape": { "type": "circle" },
-        "opacity": { "value": 0.5 },
-        "size": { "value": 2 },
-        "line_linked": {
-          "enable": true,
-          "distance": 120,
-          "color": "#ffffff",
-          "opacity": 0.4,
-          "width": 1
+      particles: {
+        number: { value: 60 },
+        color: { value: "#ffffff" },
+        shape: { type: "circle" },
+        opacity: { value: 0.5 },
+        size: { value: 2 },
+        line_linked: {
+          enable: true,
+          distance: 120,
+          color: "#ffffff",
+          opacity: 0.4,
+          width: 1
         },
-        "move": { "enable": true, "speed": 1 }
+        move: { enable: true, speed: 1 }
       },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": { "enable": true, "mode": "grab" }
+      interactivity: {
+        detect_on: "canvas",
+        events: {
+          onhover: { enable: true, mode: "grab" }
         }
       }
     });
